Fixes shifting of options on hover

--- a/styleguide/source/assets/scss/01-atoms/_select-menu.scss
+++ b/styleguide/source/assets/scss/01-atoms/_select-menu.scss
@@ -62,6 +62,7 @@
 
   &:hover {
     .ui-menu-item-wrapper.ui-state-active {
+      margin: 0;
       border: 0;
     }
   }
